# RAG-Papeer-Production-Grade-Research-Paper-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  app.py  eval_results.json  evaluate.py  goldens.json  graph.py  pyproject.toml  requirements.txt  sessions.json
backend/: btw_handler.py  models.py  paper_loader.py  rag_graph.py  vector_store.py
