[project]
name = "rag-papeer-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "deepeval>=4.0.0",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.8.3",
    "lxml>=6.1.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.1.14",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]

[tool.uv.workspace]
members = [
    "ragas_eval",
]
